--- a/invest/base/templates/index.html
+++ b/invest/base/templates/index.html
@@ -6,7 +6,7 @@
 <head>
 {% block main-content %}
     <!-- Header Start -->
-    <div class="container-fluid hero-header bg-light py-5 mb-5">
+    <div background-image: url({% static 'img/how.jpg'%}); class="container-fluid hero-header bg-light py-5 mb-5" >
         <div class="container py-5">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6">
@@ -169,7 +169,7 @@
                     <div class="d-flex align-items-start">
                         <img class="img-fluid flex-shrink-0" src="{% static 'img/icon-4.png' %}" alt="">
                         <div class="ps-4">
-                            <h5 class="mb-3"> Empowering Your Investment Journey</h5>
+                            <h5 class="mb-3">Empowering Your Investment Journey</h5>
                             <span>Beyond transactions, ReversalPayments empowers you with insights and control over your entire investment portfolio. Whether you're exploring the crypto frontier or navigating traditional markets, we're your trusted partner in financial growth.</span>
                         </div>
                     </div>
@@ -258,6 +258,62 @@
         </div>
     </div>
     <!-- Service End -->
+
+
+    <!-- how it works -->
+    <section style="background-color: 010513; object-fit: cover; color: #fff; background-image: url({% static 'img/cot.png'%});" class="how-it-work">
+
+        <div class="container-xxl py-5 animated slideInleft">
+            <div class="container">
+                <div class="row g-5 align-items-center">
+                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <img class="img-fluid animated slideInleft infinite" style="animation-duration: 7s;" src="" alt="">
+                    </div>
+   
+            <div class="col-md-6">
+                <div class="work-process">
+                    <h2 class="mb-5">How it works</h2>
+                                                                        <div class="box" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
+                                <div class="count">
+                                    <h2>1<span>.</span></h2>
+                                </div>
+                                <div class="text">
+                                    <h4>Register &amp; Log in</h4>
+                                    <p><p>Creating an account is the first step. then you need to log in</p></p>
+                                </div>
+                            </div>
+                                                    <div class="box" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
+                                <div class="count">
+                                    <h2>2<span></span></h2>
+                                </div>
+                                <div class="text">
+                                    <h4>Add Fund</h4>
+                                    <p><p>Next, pick a payment method and add funds to your account</p></p>
+                                </div>
+                            </div>
+                                                    <div class="box" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
+                                <div class="count">
+                                    <h2>3<span></span></h2>
+                                </div>
+                                <div class="text">
+                                    <h4>Select a package</h4>
+                                    <p><p>Select any of the investment packages available and investment the right amount.</p></p>
+                                </div>
+                            </div>
+                                                    <div class="box" data-aos="fade-up" data-aos-duration="1000" data-aos-anchor-placement="center-bottom">
+                                <div class="count">
+                                    <h2>4<span>.</span></h2>
+                                </div>
+                                <div class="text">
+                                    <h4>Enjoy Super Results</h4>
+                                    <p><p>You can enjoy incredible returns when your order is complete</p></p>
+                                </div>
+                            </div>
+                                                            </div>
+            </div>
+        </div>
+    </div>
+</section>
 
     
 
