--- a/invest/base/templates/navbar.html
+++ b/invest/base/templates/navbar.html
@@ -31,6 +31,7 @@
     <link href="{% static 'js/style.css' %}" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'img/style.css' %}" />
     <link rel="stylesheet" href="{% static 'js/main.js' %}" />
+    <link rel="stylesheet" href="{% static 'mine/styles.css' %}">
     <!-- <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" /> -->
     <!-- <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" /> -->
 </head>   
