--- a/invest/base/templates/contact.html
+++ b/invest/base/templates/contact.html
@@ -4,7 +4,7 @@
 
 {% block main-content %}
     <!-- Contact Start -->
-    <div class="container-xxl py-5 animated slideInup">
+    <div  class="container-xxl py-5 animated slideInup">
         <div class="container">
             <div class="row g-5 mb-5 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="col-lg-6">
@@ -19,10 +19,10 @@
                 <div class="col-lg-5 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <p class="mb-2">Our office:</p>
                     <h4>123 Street, New York, USA</h4>
-                    <hr class="w-100">
+                    <!-- <hr class="w-100"> -->
                     <!-- <p class="mb-2">Call us:</p>
                     <h4>+012 345 6789</h4> -->
-                    <hr class="w-100">
+                    <!-- <hr class="w-100"> -->
                     <p class="mb-2">Mail us:</p>
                     <h4>ReversalPayments@gmail.com</h4>
                     <hr class="w-100">
