--- a/invest/base/templates/login.html
+++ b/invest/base/templates/login.html
@@ -9,39 +9,42 @@
 <!-- <video autoplay muted loop id="video-background">
     <source src="{% static 'videos/charts.mp4' %}" type="video/mp4">
 </video> -->
-<div class="container"> 
-    <div class="row my-3">
-        <div style="border-radius: 15px;" class="col-sm-6 offset-sm-3">
-            <h3  class="text-center">Login</h3>
-            <hr>
-            <form style="background-color: #10379c; border-radius: 15px;" action="" method="post" novalidate class="shadow p-5">
-            {% csrf_token %}
-            {% for fm in form %}
-                {{fm.label_tag}} {{fm}} <small class="text-danger">{{fm.errors|striptags}}</small> <br>
-            {% endfor %}
-            <small><a href="{% url 'password_reset' %}">Forgot Password ?</a></small>
-            <br>
-            <input type="submit" class="btn btn-primary mt-4" value="Login">
-            <div class="text-center text-primary fw-bold">
-                <small>New User ? <a href="{% url 'customerregistration' %}" class="text-danger">Create an account </a></small>
-
-            </div>
-            {% if form.non_field_errors %}
-                {% for error in form.non_field_errors %}
-                    <p class="alert alert-danger my-3">{{error}}</p>
+<Body style="background-color: #010513; border-radius: 15px;" >
+    <div  class="container"> 
+        <div class="row my-3">
+            <div style="border-radius: 15px;" class="col-sm-6 offset-sm-3">
+                <h3  class="text-center">Login</h3>
+                <hr>
+                <form style="background-color: #10379c; border-radius: 15px;" action="" method="post" novalidate class="shadow p-5">
+                {% csrf_token %}
+                {% for fm in form %}
+                    {{fm.label_tag}} {{fm}} <small class="text-danger">{{fm.errors|striptags}}</small> <br>
                 {% endfor %}
-            {% endif %}
-            
-            </form>
-
+                <small><a href="{% url 'password_reset' %}">Forgot Password ?</a></small>
+                <br>
+                <input type="submit" class="btn btn-primary mt-4" value="Login">
+                <div class="text-center text-primary fw-bold">
+                    <small>New User ? <a href="{% url 'customerregistration' %}" class="text-danger">Create an account </a></small>
+                
+                </div>
+                {% if form.non_field_errors %}
+                    {% for error in form.non_field_errors %}
+                        <p class="alert alert-danger my-3">{{error}}</p>
+                    {% endfor %}
+                {% endif %}
+                
+                </form>
+    
+            </div>
+    
         </div>
-
+    
     </div>
+    
+    
+    {% endblock main-content %}
+</Body>
 
-</div>
-
-
-{% endblock main-content %}
 
 {% block footer %}
     <!-- Footer Start -->
